Corrections up to 6.7.

--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -666,7 +666,7 @@ However when the MAX-6 readings were integrated into the VTW platform and it was
 
 The accuracy of the camera control during testing was sufficient, however the speed at which the camera orientation moved to match physical orientation was rather slow, resulting in having to wait for the display to `catch up' to changes in orientation. This is attributed to the 10Hz sampling rate of the orientation sensors which, particularly after readings were combined for smoothing purposes to reduce jerky movement, resulted in too infrequent orientation updates. This hardware shortcoming is something that has already been addressed since VTW's development, by the introduction of commodity orientation sensors that sample at much higher rates and which have already begun to find their way into the realm of midrange smartphones and tablets.
 
-during testing at the cathedral site VTW averaged framerates between 20 and 25 frames per second (fps) with the modified Second Life client's quality option set to the `Low' position. Figure \ref{vtw-framerates.png} shows average framerates of the client's different quality options when standing at two different positions within the cathedral site; one `indoor' position from the centre of the nave and one `outdoor' position from the grassy area surrounded by the cloisters. The framerates for the indoor position were lower than those for the outdoor position as the virtual cathedral model features substantially more detail indoors than outdoors, due to the number of furnishings, tapestries, etc. that originally filled the building and which have been faithfully reconstructed in the virtual model.
+During testing at the cathedral site VTW averaged framerates between 20 and 25 frames per second (fps) with the modified Second Life client's quality option set to the `Low' position. Figure \ref{vtw-framerates.png} shows average framerates of the client's different quality options when standing at two different positions within the cathedral site; one `indoor' position from the centre of the nave and one `outdoor' position from the grassy area surrounded by the cloisters. The framerates for the indoor position were lower than those for the outdoor position as the virtual cathedral model features substantially more detail indoors than outdoors, due to the number of furnishings, tapestries, etc. that originally filled the building and which have been faithfully reconstructed in the virtual model.
 
 \begin{figure}[h]
 	\centering
