--- a/07_conclusions/conclusions.tex
+++ b/07_conclusions/conclusions.tex
@@ -1,3 +1,9 @@
+%******* ME ME ME!!!
+
+%As will be discussed further in the following chapter, the ultimate realisation of a parallel reality system may in fact be one in which a mix of RW and VR visuals are presented in a manner more similar to familiar AR systems, but maintaining the ability to view either complete environment individually at the total exclusion of the other.
+
+%=========================================================================================================
+
 \begin{quote}
 	\textit{``If the chaos of the nineties reflects a radical shift in the paradigms of visual literacy, the final shift away from the Lascaux/Gutenberg tradition of a pre-holographic society, what should we expect from this newer technology, with his promise of discrete encoding and subsequent reconstruction of the full range of sensory perception?''}
 \end{quote}
