--- a/07_conclusions/conclusions.tex
+++ b/07_conclusions/conclusions.tex
@@ -35,6 +35,55 @@ Alternate realities have fascinated mankind since early prehistory and with the 
 
 %=========================================================================================================
 
+\section{Discussion}
+
+%=========================================================================================================
+
+\subsection{Original Hypothesis/Aims/Objectives vs Work Completed}
+
+Critical analysis of the consequences and impact of the research
+
+Broader set of findings
+
+Talk about the lot of hitherto unknown facts and preferences that have now been revealed
+
+%=========================================================================================================
+
+\subsection{Shortcomings}
+
+%=========================================================================================================
+
+\subsection{Emergent Preferences Toward AR Style Mix}
+
+Looking back to the intro of chapter 1
+
+This is not an augmented reality system which superimposes virtual objects upon the real
+world.
+
+emphasis is on objects and their individual nature, vs the entire virtual environment of a parallel reality system
+
+
+
+
+and in section 2.4 where we said
+
+In this regard we further distinguish a parallel reality system from an augmented
+reality system by defining the former as allowing its user to switch between two different primary
+environments whereas the latter augments one particular primary environment.
+
+
+
+the mix came out on top and is experientially very similar to AR
+
+considering 3.7.5
+
+environmental aspect vs experiential aspect
+
+this mixed parallel reality is distinct to AR in terms of the environmental aspect, but not really in terms of the experiential aspect
+	except that by having this distinction in the environmental aspect, a system that adopts this mix that seems like AR also has the ability to present the distinct experiential aspect by \textbf{also} allowing the user to transition wholly to one environment at the complete exclusion of the other
+
+%=========================================================================================================
+
 \section{Contributions}
 
 As listed in section \ref{intro-contributions} the contributions of this thesis can be summarized as follows:
