Fleshing out discussion in chapter 7.

--- a/01_introduction/introduction.tex
+++ b/01_introduction/introduction.tex
@@ -193,7 +193,8 @@ The contributions of this thesis can be summarized as follows:
 \begin{itemize}
 	\item The introduction of parallel reality as a new category of alternate reality that allows users to experience complete real and virtual environments in tandem and represents an avenue for further mitigation of the vacancy problem.
 	\item The framing of parallel reality through a thorough investigation and extension of previous taxonomies that classify and distinguish between alternate reality terminologies.
-	\item The presentation of the combined Milgram/Waterworth model for visualising alternate reality experiences, including those of parallel reality systems.
+	\item The introduction of the combined Milgram/Waterworth model for visualising alternate reality experiences, including those of parallel reality systems.
+	\item The visualisation of the vacancy problem upon the combined Milgram/Waterworth model, leading to the definition of the extended vacancy problem.
 	\item Exploration into the suitability of an existing state of the art alternate reality modality of interaction (Situated Simulations) for investigation into parallel reality experience, producing the Virtual Time Window platform through extension of the Second Life client.
 	\item Development of a new platform for parallel reality, dubbed Mirrorshades, that uses the Unity game engine to combine the modern virtual reality hardware of the Oculus Rift with the novel indoor positioning technology of IndoorAtlas.
 	\item Evaluation of the Mirrorshades platform through user studies of a real world use case study within the realm of virtual heritage, including the discussion and application of an established presence questionnaire to a parallel reality experience, both to assess the worth of the concept and to inform future implementations.
